syntax = "proto3";

package csw_messages_params;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    single_file: true
};

message PbRaDec {
    double ra = 1;
    double dec = 2;
}
