syntax = "proto3";

package csw_params;

import "csw_params/units.proto";
import "csw_params/keytype.proto";
import "scalapb/scalapb.proto";
import "csw_params/parameter_types.proto";

option (scalapb.options) = {
    import: "csw.messages.params.pb._"
    import: "csw.messages.params.models._"
    single_file: true
};

message PbParameter {
    string name = 1;
    PbUnits units = 2 [(scalapb.field).type = "csw.messages.params.models.Units"];
    PbKeyType keyType = 3 [(scalapb.field).type = "csw.messages.params.generics.KeyType[_]"];
    oneof items {
        ChoiceItems choiceItems = 4;
        RaDecItems raDecItems = 5;
        StructItems structItems = 6;
        InstantItems instantItems = 61;

        StringItems stringItems = 51;
        BooleanItems booleanItems = 7;
        CharItems charItems = 112;

        ByteItems byteItems = 80;
        ShortItems shortItems = 81;
        IntItems intItems = 8;
        LongItems longItems = 9;
        DoubleItems doubleItems = 10;
        FloatItems floatItems = 11;

        ByteArrayItems byteArrayItems = 121;
        ShortArrayItems shortArrayItems = 122;
        IntArrayItems intArrayItems = 123;
        LongArrayItems longArrayItems = 13;
        FloatArrayItems floatArrayItems = 14;
        DoubleArrayItems doubleArrayItems = 15;

        ByteMatrixItems byteMatrixItems = 16;
        ShortMatrixItems shortMatrixItems = 161;
        IntMatrixItems intMatrixItems = 162;
        LongMatrixItems longMatrixItems = 17;
        FloatMatrixItems floatMatrixItems = 18;
        DoubleMatrixItems doubleMatrixItems = 19;
    }
}

message PbStruct {
    repeated PbParameter paramSet = 1;
}

message StructItems {
    option (scalapb.message).extends = "ItemType[Struct]";
    option (scalapb.message).companion_extends = "ItemTypeCompanion[StructItems]";
    repeated PbStruct values = 1 [(scalapb.field).type = "Struct"];
}
